--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio (Version 2.1)</title>
+    <title>Студія</title>
   </head>
   <body>
     <header>
@@ -62,6 +62,31 @@
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
