додані картинки, завершена верстка html

--- a/index.html
+++ b/index.html
@@ -59,36 +59,94 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="робота за комп'ютером"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="робота з телефоном та ноутбуком"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-3.jpg"
+              alt="головоломка у планшеті"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/human-1.jpg"
+              alt="бородатий хлопець в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/human-2.jpg"
+              alt="дівчмна в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="./images/human-3.jpg"
+              alt="хлопець"
+              width="270"
+              height="260"
+            />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img
+              src="images/human-4.jpg"
+              alt="бородатий хлопець в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <footer>
+      <a href="">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/MPxpte4mxKh9pL8U6"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
